--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,10 @@ body {
     border-radius: 20px;
 }
 
+.player-header{
+    margin-bottom: 5%;
+}
+
 .albumCover {
     width: 200px;
     height: 200px;
@@ -83,15 +87,22 @@ button {
 
 .playlist-item {
     padding: 10px;
+    color: white;
     border-radius: 5px;
     margin-bottom: 5px;
     cursor: pointer;
-    transition: background 0.3s;
     display: flex;
     align-items: center;
     gap: 20px;
+    width: 100%;
 }
 
 .music-time{
-    margin-left: auto;
+    margin-left:auto;
 }
+
+.playlist-item:hover{
+	color: rgb(53, 147, 255);
+	box-shadow: inset 0 0 0 1.5px #FFFF;
+}
+
